rbt icon overlap fix

--- a/public/css/rosebt.css
+++ b/public/css/rosebt.css
@@ -120,7 +120,7 @@ a:active {
 	z-index: 50;
 	position: relative;
 	top: 55px;
-	right: 235px;
+	right: 250px;
 }
 
 
